# ProvShield

./: .gitignore  CHANGELOG.md  PROJECT_INDEX.md  README.md  pyproject.toml
.github/workflows/: ci.yml
artifact/: Makefile  Makefile.template  README.md  audit_log_schema.json  reproducibility_plan.md
artifact/configs/: default_policy.yaml  tool_effect_manifest.yaml
artifact/docker/: Dockerfile  Dockerfile.template  docker-compose.template.yml  (+1 more)
checklists/: acceptance_checklist.md  claim_discipline.md  rebuttal_preparation.md  submission_readiness.md
docs/: 00_project_brief.md  01_initial_research_plan.md  02_threat_model.md  03_label_policy_spec.md  04_user_intent_bridge.md  05_formal_model.md  06_runtime_architecture.md  07_evaluation_plan.md  08_acceptance_criteria.md  09_milestones.md  10_related_work_positioning.md  11_submission_strategy.md  12_ethics_and_limitations.md  13_risk_register.md  baseline_fidelity.md  failure_analysis.md  metrics_definitions.md  simulated_reviews.md  theorem_code_mapping.md
eval/: README.md  ablation_plan.md  analysis_template.md  attack_suite_plan.yaml  benchmark_matrix.csv  benign_tasks.yaml  metrics.md
milestones/: deliverables_checklist.md  milestone_tracker.csv  roadmap.md  weekly_execution_plan.md
paper/: paper_draft.md  paper_draft.tex  paper_outline_cn.md  positioning_authority_laundering.md  references.bib
prototype/: README.md
tests/: conftest.py  test_mcp_integration.py  test_mcp_real_integration.py  test_mock_sinks.py  test_provshield.py
tools/: replay_audit.py  verify_result_consistency.py
(+109 files in other folders)
